syntax = "proto2";
package fuel;

// swagger:model
message Model {
  optional string createdAt   = 2;
  optional string updatedAt   = 3;
  optional string deletedAt   = 4;

  optional string name        = 5;
  optional string owner       = 7;
  optional string description = 8;
  optional int64 likes        = 9;
  optional int64 downloads    = 10;
  optional int64 filesize     = 11;

  optional string upload_date = 12;
  optional string modify_date = 13;

  optional uint64 license_id     = 14;
  optional string license_name   = 15;
  optional string license_url    = 16;
  optional string license_image  = 17;

  optional int64 permission    = 18;
  optional string url_name     = 19;
  optional string thumbnail_url = 20;
  optional bool is_liked = 21;
  optional int64 version = 22;
  optional bool private = 23;

  repeated string tags        = 30;
  repeated ModelMetadatum metadata  = 31;
  repeated string categories        = 32;
}

// swagger:model
message ModelMetadatum {
  required string key = 1;
  required string value = 2;
}

// swagger:model
message Models {
  repeated Model models = 1;
}

// swagger:model
message FileTree {
  // resource name (eg. model or world name)
  optional string name      = 1;
  // resource owner
  optional string owner     = 2;
  // resource version
  optional int64 version    = 3;

  message FileNode {
    optional string name       = 1;
    optional string path       = 2;
    repeated FileNode children = 5;
  }
  repeated FileNode file_tree = 10;
}
